--- a/GameAnimationProject.vcxproj.filters
+++ b/GameAnimationProject.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClInclude Include="MyDemoApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Woman.gltf">
